test/expected/explain_fvel_v.out
explain void f( void, ... )
                ^
17: error: "void" must be only parameter if specified
